--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,14 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+div{
+  color:gray;
+}
+//@import "node_modules/bourbon/node_modules/bourbon/app/assets/stylesheets/bourbon";
+//@import "node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets/neat";
+
+//.loveing{
+//  @include outer-container;
+//
+//}
+ //@import "bourbon";
 
