playing with blades

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,12 @@
 //  @include outer-container;
 //
 //}
-@import "bourbon";
-@import "neat";
+
+@import "bourbon/bourbon";
+@import "neat/neat";
 @import "lobby";
+$fa-font-path:        "../fonts/font-awesome";
+
+@import "font-awesome/font-awesome";
+@import "lobby";
+@import "unattached";
