--- a/resources/assets/sass/unattached.scss
+++ b/resources/assets/sass/unattached.scss
@@ -146,6 +146,7 @@ a:hover{
   margin: 40px;
   padding: 20px;
   box-shadow: 10px 10px 10px rgba(20, 20, 20, .7);
+  width:auto;
 }
 
 .clearWrapper{
