--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,3 +17,4 @@ $fa-font-path:        "../fonts/font-awesome";
 @import "font-awesome/font-awesome";
 @import "lobby";
 @import "unattached";
+@import "analytics";
