--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3080,4 +3080,50 @@ li.game {
   border: 10px solid #9f9;
   background: #cfc; }
 
+#analytics-grid {
+  max-width: 100em;
+  margin-left: auto;
+  margin-right: auto; }
+  #analytics-grid::after {
+    clear: both;
+    content: "";
+    display: table; }
+  #analytics-grid .grid-row .colOne {
+    float: left;
+    display: block;
+    margin-right: 4.8291579146%;
+    width: 21.378131564%; }
+    #analytics-grid .grid-row .colOne:last-child {
+      margin-right: 0; }
+  #analytics-grid .grid-row .colTwo {
+    float: left;
+    display: block;
+    margin-right: 4.8291579146%;
+    width: 21.378131564%;
+    word-break: break-all; }
+    #analytics-grid .grid-row .colTwo:last-child {
+      margin-right: 0; }
+  #analytics-grid .grid-row .colThree {
+    float: left;
+    display: block;
+    margin-right: 4.8291579146%;
+    width: 21.378131564%; }
+    #analytics-grid .grid-row .colThree:last-child {
+      margin-right: 0; }
+  #analytics-grid .grid-row .colFour {
+    float: left;
+    display: block;
+    margin-right: 4.8291579146%;
+    width: 21.378131564%; }
+    #analytics-grid .grid-row .colFour:last-child {
+      margin-right: 0; }
+  #analytics-grid .grid-row .colFive {
+    float: left;
+    display: block;
+    margin-right: 4.8291579146%;
+    width: 12.6423684045%;
+    margin-right: 0; }
+    #analytics-grid .grid-row .colFive:last-child {
+      margin-right: 0; }
+
 /*# sourceMappingURL=app.css.map */
