--- a/resources/assets/sass/analytics.scss
+++ b/resources/assets/sass/analytics.scss
@@ -2,6 +2,10 @@ $max-width: 100em;
 #analytics-grid {
   @include outer-container;
   .grid-row {
+    height:1em;
+    &:hover{
+      background:lightgray;
+    }
     .colOne {
       @include span-columns(1.5);
     }
