Analytics blade integrated into main lobby.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3063,8 +3063,10 @@ li.game {
     display: table; }
   #analytics-grid .grid-row {
     height: 1em; }
+    #analytics-grid .grid-row:nth-child(even) {
+      background: lightgray; }
     #analytics-grid .grid-row:hover {
-      background: lightgrey; }
+      background: powderblue; }
     #analytics-grid .grid-row .colOne {
       float: left;
       display: block;
