moved app.css into more normal space lobby.blade now has logout on right lobby.scss fixed to deal with float

--- a/resources/assets/sass/lobby.scss
+++ b/resources/assets/sass/lobby.scss
@@ -163,7 +163,7 @@ a {
   font-size: 120%;
 }
 
-.logoutUpper {
+.logout, .logoutUpper {
   float: right;
 }
 .tabbable .nav-tabs li a.logout, .logout {
