fixed logout bug in pane

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -230,7 +230,7 @@ a {
   color: black;
   font-size: 120%; }
 
-.logout, .logoutUpper {
+.logoutUpper, .logout-lower {
   float: right; }
 
 .tabbable .nav-tabs li a.logout, .logout {
@@ -2676,7 +2676,7 @@ a {
   color: black;
   font-size: 120%; }
 
-.logout, .logoutUpper {
+.logoutUpper, .logout-lower {
   float: right; }
 
 .tabbable .nav-tabs li a.logout, .logout {
