--- a/resources/assets/sass/lobby.scss
+++ b/resources/assets/sass/lobby.scss
@@ -163,7 +163,7 @@ a {
   font-size: 120%;
 }
 
-.logout, .logoutUpper {
+.logoutUpper , .logout-lower{
   float: right;
 }
 .tabbable .nav-tabs li a.logout, .logout {
