Fix for font awesome

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,7 +12,7 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "lobby";
-$fa-font-path:        "../fonts/font-awesome";
+$fa-font-path: "../../fonts/font-awesome";
 @import "font-awesome/font-awesome";
 @import "lobby";
 @import "unattached";
