--- a/resources/assets/sass/analytics.scss
+++ b/resources/assets/sass/analytics.scss
@@ -2,6 +2,7 @@ $max-width: 100em;
 #analytics-grid {
   @include outer-container;
   .grid-row {
+    clear:both;
     &:nth-child(even) {
       background: lightgray;
     }
