--- a/resources/assets/sass/unattached.scss
+++ b/resources/assets/sass/unattached.scss
@@ -117,7 +117,7 @@ a:hover{
   border-radius: 10px;
   padding: 5px;
   display:block;
-  margin:20px 0 0;
+  margin:0;
 }
 .scenarioWrapper{
   float:left;
@@ -212,6 +212,8 @@ li.game {
 .play{
   background: #cfc;
   border-color: #9f9;
+  margin-left:20px;
+  margin-top:10px;
   &:hover{
     border-color: #9f9;
   }
@@ -222,4 +224,11 @@ li.game {
   border-radius:10px;
   border: 10px solid #9f9;
   background: #cfc;
+}
+
+.kewl-box{
+  border:3px solid gray;
+  border-radius:10px;
+  margin-bottom:20px;
+  padding:10px;
 }
